Face Nearest snapping broken #114596

Closed
opened 2023-11-07 19:32:18 +01:00 by Julien Kaspar · 7 comments
Member

System Information
Operating system: Linux-6.5.6-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.6-gentoo) AMD 4.6 (Core Profile) Mesa 23.2.1

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-07 11:49, hash: 869372ffc335
Worked: (newest version of Blender that worked as expected)

Short description of error
I only had this happen in specific work files. I don't know how to reproduce this from a new file but I included a simplified example .blend.
Altering the objects or collections can sometimes fix the issue.

Exact steps for others to reproduce the error

  • Open the example file
  • Move the sphere mesh (See the broken face nearest snapping)
**System Information** Operating system: Linux-6.5.6-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.6-gentoo) AMD 4.6 (Core Profile) Mesa 23.2.1 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-07 11:49, hash: `869372ffc335` Worked: (newest version of Blender that worked as expected) **Short description of error** I only had this happen in specific work files. I don't know how to reproduce this from a new file but I included a simplified example .blend. Altering the objects or collections can sometimes fix the issue. **Exact steps for others to reproduce the error** - Open the example file - Move the sphere mesh (See the broken face nearest snapping)
Julien Kaspar added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-11-07 19:32:18 +01:00
Iliya Katushenock added the
Interest
Modeling
label 2023-11-07 19:42:49 +01:00
Germano Cavalcante self-assigned this 2023-11-07 22:13:13 +01:00

I can confirm. The problem appears depending on the number of Face Nearest Steps and the order in which the objects are tested.

Simple fix coming...


Analyzing the code, I still wonder what "better results" this Face Nearest Steps option return. BLI_bvhtree_find_nearest seems to already get the closest point. Do we really need these steps?

@gfxcoder ^

I can confirm. The problem appears depending on the number of `Face Nearest Steps` and the order in which the objects are tested. Simple fix coming... --- Analyzing the code, I still wonder what "better results" this `Face Nearest Steps` option return. `BLI_bvhtree_find_nearest` seems to already get the closest point. Do we really need these steps? @gfxcoder ^
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-07 22:31:57 +01:00
Member

will take a look as soon as I can (later tonight?).

in general, the snapping steps is useful for breaking a large transformation into smaller ones, with snapping happening after each small step. this can have better results when the target surface is curved, especially when moving a bunch of verts with a falloff, as it helps in maintaining the relative distances. it's a feature that helps in specific situations. this specific context might not play well with the algorithm.

will take a look as soon as I can (later tonight?). in general, the snapping steps is useful for breaking a large transformation into smaller ones, with snapping happening after each small step. this can have better results when the target surface is curved, especially when moving a bunch of verts with a falloff, as it helps in maintaining the relative distances. it's a feature that helps in specific situations. this specific context might not play well with the algorithm.
Author
Member

The issue doesn't seem to be fixed in all cases. I can still reproduce this bug in other files. I'll try to get another simplified example file.

The issue doesn't seem to be fixed in all cases. I can still reproduce this bug in other files. I'll try to get another simplified example file.
Author
Member

I managed to put together a file to show the bug that still exists. It wasn't fixed.
It only fails to snap on certain linked objects. I couldn't reproduce it on a new file but simplified a work file of mine instead.

If any changes to the linked objects are done, the issue is gone. But since these are linked meshes that's not an option in my work files.

@gfxcoder can you take a look at this?

I managed to put together a file to show the bug that still exists. It wasn't fixed. It only fails to snap on certain linked objects. I couldn't reproduce it on a new file but simplified a work file of mine instead. If any changes to the linked objects are done, the issue is gone. But since these are linked meshes that's not an option in my work files. @gfxcoder can you take a look at this?
Blender Bot added
Status
Needs Triage
and removed
Status
Resolved
labels 2023-11-21 12:58:58 +01:00
Author
Member

@mano-wii Also not sure what the procedure is for reopening a bug.
Since this bug was never properly fixed I didn't think it was needed to make a new report.

@mano-wii Also not sure what the procedure is for reopening a bug. Since this bug was never properly fixed I didn't think it was needed to make a new report.
Iliya Katushenock added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-11-21 13:14:45 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-21 17:39:12 +01:00

In fact there is an error with transformed objects (moved, scaled or rotated). Fixed now.

I also analyzed a little better how face steps work.
If I understand correctly, it causes the distance of the original movement to be projected as a path on the surface of the object.
image

In fact there is an error with transformed objects (moved, scaled or rotated). Fixed now. I also analyzed a little better how face steps work. If I understand correctly, it causes the distance of the original movement to be projected as a path on the surface of the object. ![image](/attachments/ee4ef646-f10b-491d-878a-ae0111c7549f)
Member

let me know if I need to take a look at it. thanks for your work, @mano-wii

let me know if I need to take a look at it. thanks for your work, @mano-wii
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114596
No description provided.