Fix #114596: Face Nearest with steps sometimes breaks

When multiple steps are tested, we cannot depend on the distance
calculated for `nearest.dist_sq`, as it reduces with each step.